// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicAddress component sanity matches default snapshot 1`] = `
.c0 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  text-align: left;
}

.c0 {
  box-sizing: border-box;
}

.c5 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #fff;
  background-color: #4E3FCE;
  font-size: inherit;
  height: 48px;
  height: small;
  width: small;
  position: relative;
  border: 0;
  border-color: none;
  border-radius: 4px;
  text-align: left;
}

.c5 {
  box-sizing: border-box;
}

.c1 {
  margin-bottom: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
}

.c1:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c3 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  text-overflow: ellipsis;
  white-space: no-wrap;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c3:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c3:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c3:valid {
  border-color: #28C081;
}

.was-validated .c3:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c3:invalid {
  border-color: #EC9081;
}

.was-validated .c3:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c4 {
  font-size: inherit;
  font-weight: 600;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 12px;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
  background-color: #4E3FCE;
}

.c4:hover {
  background-color: #5f52d2;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c4:active {
  background-color: #4638b9;
  box-shadow: none;
}

.c4:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c4 > svg {
  display: block;
}

.c4 > svg:first-child {
  margin-left: -1rem;
  margin-right: .5rem;
}

.c4 > svg:last-child {
  margin-left: .5rem;
  margin-right: -1rem;
}

.c4 > svg:first-child:last-child {
  margin: 0;
}

.c4 {
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4.-is-copied::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background: inherit;
  opacity: 1;
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
  -webkit-animation-duration: 100ms;
  animation-duration: 100ms;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c4::after {
  opacity: 0;
  content: 'Copied!';
  position: absolute;
  width: 100%;
  background: inherit;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}

.c4.-is-copied::after {
  opacity: 1;
  -webkit-animation-name: kcJLrX;
  animation-name: kcJLrX;
  -webkit-animation-duration: 1000ms;
  animation-duration: 1000ms;
  -webkit-animation-timing-function: ease;
  animation-timing-function: ease;
}

.c2 {
  text-align: left;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.c2 > input {
  width: 100%;
  padding-right: 5.25rem;
}

.c2 > button {
  position: absolute;
  right: 0.75rem;
}

<label
  class="c0"
  display="flex"
>
  <div
    class="c1"
    color="copyColor"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  >
    Public Address
  </div>
  <div
    class="c2"
  >
    <input
      class="c3"
      color="copyColor"
      font-family="sansSerif"
      font-size="1rem"
      height="3rem"
      readonly=""
    >
      
    </input>
    <button
      class="c4 c5"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
      height="48px"
      type="button"
    >
      <span>
        Copy
      </span>
    </button>
  </div>
</label>
`;

exports[`PublicAddress component sanity matches themed snapshot 1`] = `
.c1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c6 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #fff;
  background-color: #4E3FCE;
  font-size: inherit;
  height: 48px;
  height: small;
  width: small;
  position: relative;
  border: 0;
  border-color: none;
  border-radius: 4px;
  text-align: left;
}

.c6 {
  box-sizing: border-box;
}

.c2 {
  margin-bottom: 8px;
  color: #3F3D4B;
  font-size: 14px;
  text-align: left;
  font-size: 14px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  text-align: left;
  line-height: 1.5;
}

.c2 {
  box-sizing: border-box;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c4 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0px;
  padding-bottom: 0px;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  text-overflow: ellipsis;
  white-space: no-wrap;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c4:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c4:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c4:valid {
  border-color: #28C081;
}

.was-validated .c4:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c4:invalid {
  border-color: #EC9081;
}

.was-validated .c4:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c5 {
  font-size: inherit;
  font-weight: 600;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 12px;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
  background-color: #4E3FCE;
}

.c5:hover {
  background-color: #5f52d2;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:active {
  background-color: #4638b9;
  box-shadow: none;
}

.c5:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c5 > svg {
  display: block;
}

.c5 > svg:first-child {
  margin-left: -1rem;
  margin-right: .5rem;
}

.c5 > svg:last-child {
  margin-left: .5rem;
  margin-right: -1rem;
}

.c5 > svg:first-child:last-child {
  margin: 0;
}

.c5 {
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.-is-copied::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background: inherit;
  opacity: 1;
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
  -webkit-animation-duration: 100ms;
  animation-duration: 100ms;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c5::after {
  opacity: 0;
  content: 'Copied!';
  position: absolute;
  width: 100%;
  background: inherit;
  -webkit-transition: all 500ms ease;
  transition: all 500ms ease;
}

.c5.-is-copied::after {
  opacity: 1;
  -webkit-animation-name: kcJLrX;
  animation-name: kcJLrX;
  -webkit-animation-duration: 1000ms;
  animation-duration: 1000ms;
  -webkit-animation-timing-function: ease;
  animation-timing-function: ease;
}

.c3 {
  text-align: left;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.c3 > input {
  width: 100%;
  padding-right: 5.25rem;
}

.c3 > button {
  position: absolute;
  right: 0.75rem;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <label
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Public Address
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        color="copyColor"
        font-family="sansSerif"
        font-size="1rem"
        height="3rem"
        readonly=""
      >
        
      </input>
      <button
        class="c5 c6"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
        height="48px"
        type="button"
      >
        <span>
          Copy
        </span>
      </button>
    </div>
  </label>
</div>
`;
